--- a/Style/style.css
+++ b/Style/style.css
@@ -49,6 +49,10 @@ body {
     border: none;
 }
 
+.nav-menu:hover .navigation {
+    display: block;
+}
+
 .user-logo {
     padding: 0 33px;
 }
@@ -64,6 +68,76 @@ body {
     margin-top: -8px;
     margin-left: 20px;
 
+}
+
+.navigation {
+    position: absolute;
+    left: 1530px;
+    width: 230px;
+    height: 764px;
+    background-color: #ffffff;
+    box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+    margin-top: 28px;
+    display: none;
+}
+
+.menu-title {
+    list-style-type: none;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #F16D7F;
+    padding: 20px 0 12px 33px;
+}
+
+.menu-link--dec {
+    text-decoration: none;
+}
+
+.menu-link {
+    list-style-type: none;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #6F6E6E;
+    padding-left: 55px;
+}
+
+.menu-link:hover {
+    opacity: 0.5;
+}
+
+.close {
+    position: absolute;
+    border: none;
+}
+
+.close:before,
+.close:after {
+    position: absolute;
+    top: 10px;
+    left: 210px;
+    content: ' ';
+    height: 12px;
+    width: 2px;
+    background-color: #6F6E6E;
+}
+
+.close:before {
+    transform: rotate(45deg);
+}
+
+.close:after {
+    transform: rotate(-45deg);
+}
+
+.nav-title {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17px;
+    padding-top: 37px;
+    padding-left: 33px;
+    margin-bottom: 4px;
 }
 
 .brand {
@@ -109,7 +183,7 @@ body {
     justify-content: space-between;
 }
 
-.offers-women {
+.offers-link--women {
     background-image: url(../img/bgc-women.jpg);
     background-repeat: no-repeat;
     width: 360px;
@@ -118,9 +192,10 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
+    text-decoration: none;
 }
 
-.offers-men {
+.offers-link--men {
     background-image: url(../img/bgc-men.jpg);
     background-repeat: no-repeat;
     width: 360px;
@@ -129,9 +204,10 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
+    text-decoration: none;
 }
 
-.offers-kids {
+.offers-link--kids {
     background-image: url(../img/bgc-kids.jpg);
     background-repeat: no-repeat;
     width: 360px;
@@ -140,18 +216,24 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
+    text-decoration: none;
 }
 
 .offers-acces {
     margin-top: 30px;
+    width: 100%;
+
+}
+
+.offers-link--acces {
     background-image: url(../img/bgc-acc.jpg);
     background-repeat: no-repeat;
-    width: 100%;
     height: 180px;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
+    text-decoration: none;
 
 }
 
@@ -167,4 +249,416 @@ body {
     font-size: 24px;
     line-height: 19px;
     color: #f16d7f;
+}
+
+.products {
+    margin-top: 96px;
+}
+
+.products-title {
+    font-weight: 400;
+    font-size: 30px;
+    text-align: center;
+}
+
+.products-desc {
+    text-align: center;
+    font-weight: 400;
+    font-size: 14px;
+    color: #9F9F9F;
+}
+
+.products-item {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 48px;
+
+
+}
+
+.item {
+    width: 360px;
+    height: 581px;
+    background-color: #F8F8F8;
+    margin-bottom: 30px;
+    position: relative;
+}
+
+.item:hover {
+    box-shadow: 0 5px 8px rgba(0, 0, 0, 0.16);
+}
+
+.item:hover .item-pic {
+    filter: brightness(30%);
+}
+
+.add {
+    display: flex;
+    padding: 11px;
+    align-items: center;
+    border: 1px solid #ffffff;
+    text-decoration: none;
+    pointer-events: auto;
+}
+
+.add:hover {
+    box-shadow: 0 0 10px #fff;
+}
+
+.item:hover .add-box {
+    display: flex;
+}
+
+.add-box {
+    display: none;
+    position: absolute;
+    top: 188px;
+    justify-content: center;
+    width: 100%;
+    pointer-events: none;
+}
+
+.add-desc {
+    font-family: 'Lato';
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #FFFFFF;
+    padding-left: 11px;
+}
+
+.item-link {
+    text-decoration: none;
+}
+
+.item-text {
+    display: flex;
+    flex-direction: column;
+}
+
+.item-text--title {
+    color: #000000;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 16px;
+    padding-left: 18px;
+    padding-top: 25px;
+}
+
+.item-text--description {
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 17px;
+    color: #5D5D5D;
+    padding: 13px 29px 18px 18px;
+}
+
+.item-text--price {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #F16D7F;
+    padding-left: 18px;
+}
+
+.offers-button {
+    border: 1px solid #FF6A6A;
+    width: 211px;
+    height: 47px;
+    margin: 48px auto 96px auto;
+    display: block;
+    background-color: #fff;
+
+}
+
+.all-product {
+    text-decoration: none;
+}
+
+.button-text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #F26376;
+}
+
+.benefits {
+    background-color: #222224;
+}
+
+.benefits-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.delivery {
+    width: 360px;
+    height: 134px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 103px;
+    margin-bottom: 103px;
+}
+
+.benefits-title {
+    font-weight: 400;
+    font-size: 19.96px;
+    line-height: 24px;
+    color: #FBFBFB;
+    padding-top: 28px;
+    padding-bottom: 16px;
+}
+
+.benefits-desc {
+    font-weight: 300;
+    font-size: 13.972px;
+    line-height: 17px;
+    color: #FBFBFB;
+    padding-bottom: 104px;
+}
+
+.sales {
+    width: 360px;
+    height: 134px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.quality {
+    width: 360px;
+    height: 134px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.reviews {
+    background-image: url(../img/reviewfoto.png);
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-size: cover;
+    width: 100%;
+    height: 448px;
+}
+
+.reviews-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+}
+
+.review-left {
+    width: 360px;
+    height: 225px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.review-text {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+    color: #222224;
+    padding-top: 30px;
+    font-style: italic;
+}
+
+.review-right {
+    width: 557px;
+    height: 142px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.sub-text {
+    font-weight: 700;
+    font-size: 24px;
+    text-align: center;
+}
+
+.sub-text--small {
+    font-weight: 400;
+    font-size: 18px;
+}
+
+.review-sub {
+    width: 356px;
+    display: flex;
+    margin-top: 32px;
+}
+
+.review-email {
+    width: 256px;
+    height: 49px;
+    background-color: #E1E1E1;
+    border: none;
+    outline: none;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #222224;
+    opacity: 0.67;
+    padding-left: 22px;
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
+}
+
+.review-button {
+    width: 100px;
+    height: 49px;
+    border: none;
+    background-color: #F16D7F;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #ffffff;
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 50px;
+}
+
+.footer {
+    background-color: #222224;
+    width: 100%;
+    height: 79px;
+}
+
+.footer-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 79px;
+}
+
+.footer-text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #FBFBFB;
+}
+
+.fa-brands {
+    width: 32px;
+    height: 32px;
+    background-color: #ffffff;
+    padding-top: 8px;
+    margin-right: 7px;
+    text-align: center;
+}
+
+.arrivals {
+    background-color: #F8F3F4;
+}
+
+.arrivals-container {
+    height: 148px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.arrivals-title {
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 29px;
+    color: #F16D7F;
+}
+
+.arrivals-link {
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 17px;
+    color: #636363;
+}
+
+.arrivals-link--pink {
+    font-weight: 700;
+    color: #F16D7F;
+}
+
+.carousel {
+    width: 100%;
+    height: 777px;
+    z-index: 0;
+    background: #F7F7F7;
+}
+
+.products1 {
+    position: relative;
+}
+
+.produscts-box {
+    padding: 128px 0;
+}
+
+.product-desc {
+    text-align: center;
+}
+
+.desc-title {
+    position: relative;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 17px;
+    color: #F16D7F;
+    padding-top: 64px;
+    z-index: 5;
+}
+
+.desc-line--up {
+    background: #EF5B70;
+    width: 63px;
+    height: 3px;
+    border: none;
+    margin: 12px 540px;
+}
+
+.desc-brand {
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 22px;
+    color: #4D4D4D;
+}
+
+.desc-item {
+    margin: 48px 293px 32px 293px;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+    color: #5E5E5E;
+}
+
+.desc-price {
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 29px;
+    color: #EF5B70;
+}
+
+.desc-line--down {
+    background: #EAEAEA;
+    width: 640px;
+    height: 1px;
+    margin: 65px 250px;
+}
+
+.desc-filter {
+    display: flex;
+    justify-content: center;
+}
+
+.filter-title {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #6F6E6E;
 }
