--- a/Style/style.css
+++ b/Style/style.css
@@ -762,4 +762,86 @@ summary::after {
   line-height: 19px;
   color: #F16D7F;
   padding-left: 23px;
+}
+
+.registration {
+  display: flex;
+  justify-content: space-between;
+}
+
+.user-info {
+  display: flex;
+  flex-direction: column;
+  padding: 64px 0px;
+}
+
+.reg-description {
+  margin-top: 64px;
+}
+
+.data-desc {
+  margin-bottom: 20px;
+  font-family: "Lato";
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 19px;
+  color: #222222;
+}
+
+.user-data {
+  border: 1px solid #A4A4A4;
+  width: 360px;
+  height: 45px;
+  padding-left: 15px;
+}
+
+.first-margin {
+  margin: 20px 0px;
+}
+
+.gender-box {
+  margin: 30px 0px;
+}
+
+.user-warn {
+  font-family: "Lato";
+  font-weight: 300;
+  font-size: 13px;
+  line-height: 16px;
+  color: #B1B1B1;
+  padding-top: 15px;
+  padding-bottom: 40px;
+}
+
+.join-button {
+  padding: 16px 30px;
+  border-radius: 0%;
+  border: none;
+  color: #ffffff;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  background-color: #F16D7F;
+}
+
+.reg-text {
+  font-family: "Lato";
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 29px;
+  color: #000000;
+}
+
+.reg-desc {
+  padding: 22px 0px;
+}
+
+.reg-text--list {
+  padding-bottom: 16px;
+  list-style: none;
+}
+
+.reg-text--list::before {
+  content: "✔";
+  padding-right: 23px;
 }/*# sourceMappingURL=Style.css.map */
